# TermsScope-Analytics

./: .gitignore  README.md  RUN_WITHOUT_DOCKER_COMPOSE.md  alembic-commands.txt  codes.txt  docker-compose.yml  local-running-commands.txt
backend/: .env.docker  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 3f8c2a1b9d10_init_users_and_analyses.py  a1c4e7f2b835_add_denormalized_analysis_columns.py  d42f98a8e044_restructure_auth_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: analyze.py  auth.py  history.py  router.py
backend/app/auth/: __init__.py  dependencies.py  google_oauth.py  jwt_handler.py  password.py
backend/app/db/: __init__.py  redis.py
backend/app/llm/: base.py  claude_provider.py  factory.py  gemini_provider.py  openai_provider.py
backend/app/models/: __init__.py  analysis.py  user.py
backend/app/pipeline/: __init__.py  graph.py  state.py  tokenizer.py
backend/app/schemas/: input.py  output.py  user.py
backend/app/services/: cache.py  pdf_parser.py  scraper.py
backend/evals/: README.md  __init__.py  chunker.py  cli.py  config.py  fetcher.py  report.py  runner.py  termsscope_runner.py  tosdr.py
backend/evals/fixtures/: sources.yaml
backend/evals/judge/: client.py  pass1.py  pass2.py  prompts.py  schemas.py
backend/evals/matching/: embeddings.py  matcher.py
backend/evals/metrics/: aggregate.py  clause_metrics.py  hallucination.py  scoring.py
backend/evals/plots/: category_heatmap.py  confusion_heatmap.py  coverage_stacked.py  prf1_bars.py  radar.py  score_scatter.py  style.py
backend/tests/: __init__.py  conftest.py  test_analyze_api.py  test_auth.py  test_health.py  test_input_validation.py  test_schemas.py  test_service_utils.py
backend/tests/eval/: test_judge_schema_roundtrip.py  (+2 more)
(+70 files in other folders)
